<resources>
    <string name="app_name">ProductList</string>
    <string name="product">Product</string>
    <string name="add">Add</string>
    <string name="clear_list">CLEAR LIST</string>
    <string name="vovka">Vovka</string>
    <string name="viktor">Viktor</string>
    <string name="serozhka">Serozhka</string>
    <string name="exit">EXIT</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
</resources>
