<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.karabushka.productlist.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="0.80"
        >

        <EditText
            android:id="@+id/editText"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/product"
            android:inputType="textPersonName"
            android:textSize="30sp"
            android:layout_weight="0.50" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="55sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="30sp"

            />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/radioButtonVo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:checked="true"
            android:text="@string/vovka" />

        <RadioButton
            android:id="@+id/radioButtonVi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/viktor" />

        <RadioButton
            android:id="@+id/radioButtonS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/serozhka" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addProductToList"
        android:text="@string/add"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.96"
        android:orientation="vertical"
        android:background="@color/white">

    </LinearLayout>

</LinearLayout>
